# ControlCore

./: .dockerignore  AUDIT.md  Dockerfile  README.de.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-CN.md  pyproject.toml
.dev/: journal.md
ControlCore/: boot.py
ControlCore/adapters/: executor.py
ControlCore/registry/: config_loader.py
audits/: AUDIT-2026-03-23.md  AUDIT-2026-03-24.md
docs/superpowers/plans/: 2026-04-02-controlcore-completion.md  2026-04-03-intelligent-router.md
ghostrouter/: __init__.py  boot.py  circuit_breaker.py  cli.py  config.py  daemon.py  job_registry.py  normalize.py  observability.py  schemas.py
ghostrouter/adapters/: __init__.py  cloud.py  cpu.py  executor.py  interface.py  ollama.py  remote.py  sandbox.py
ghostrouter/registry/: __init__.py  config_loader.py  dial.py  learning.py  loader.py  routing.py  schema.py
tests/: conftest.py  test_boot.py  test_budget.py  test_circuit_breaker.py  test_cloud_adapters.py  test_config_loader.py  test_dial.py  test_executor.py  test_executor_writeback.py  test_fallback.py  test_learning.py  test_preferences.py  test_redaction.py  test_routing.py  test_routing_intelligent.py  test_schemas.py
