[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostcore"
version = "0.1.0"
description = "LLM orchestration gateway — intelligent routing, fallback, circuit breakers, redaction, 10+ providers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Adam Thomas", email = "adam@ghostlogic.dev"}
]
keywords = ["llm", "gateway", "orchestration", "routing", "anthropic", "openai", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25.0",
    "uvicorn>=0.24.0",
    "starlette>=0.32.0",
    "structlog>=23.0.0",
    "click>=8.0.0",
    "maelspine>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/adam-scott-thomas/ghostcore"
Repository = "https://github.com/adam-scott-thomas/ghostcore"
Issues = "https://github.com/adam-scott-thomas/ghostcore/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
ControlCore = "ControlCore.cli:main"
ghostcore = "ControlCore.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (may require network access, slower)",
]
